@@ -56,6 +56,7 @@
 
 	"suppliers": {
 		"enabled": true,
+		"rals_conns": ["*internal"]
 	},
 
 	"stats": {
