@@ -1,8 +1,9 @@
 cgrates (0.10.3~dev) UNRELEASED; urgency=medium
 
-  * Incremented version
   * [RALs] Send balance update event from rals to threshold ( in case of negative) only once
   * [SessionS] Use rals_conns when sending refund rounding
+  * [SupplierS] SupplierS require a connection to rals when give
+    AccountIDs and RatingPlanIDs to calculate
 
  -- DanB <danb@cgrates.org>  Thu, 08 Oct 2020 16:23:58 +0300
 
